k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financial-backend
  namespace: financial-backend
  labels:
    app: financial-backend
spec:
  type:     ClusterIP
  selector:
    app: financial-backend
  ports:
    - name:       http
      port:       80
      targetPort: 3000
      protocol:   TCP
